--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
 
 <body id="page-top">
 
-  <!-- Navigation -->
+<!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="index.html">Página Inicial</a>
@@ -37,16 +37,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="sobrenos.html">Sobre nós</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="livro.html">Livros</a>
-          </li>
+             <a class="nav-link js-scroll-trigger" href="sobrenos.html">Quem Somos</a>
+          </li>         
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contato.html">Contatos</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="erd.html">ERD</a>
           </li>
         </ul>
       </div>
@@ -83,21 +83,24 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+55(13)9972-49944</div>
+          <div>+55(13)972-4994</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">rafaelribeirobovecchio@gmail.com</a>
+          <a class="d-block" href="mailto:rafaelribeirobovecchio@gmail.com">rafaelribeirobovecchio@gmail.com</a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
+<!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-       <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP <br>
+       <a href="https://github.com/Bovecchio/ProjetoBiblioteca">GitHub do Projeto</a>
+      </div>      
+    </div> 
   </footer>
 
   <!-- Bootstrap core JavaScript -->
