--- a/erd.html
+++ b/erd.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SOBRE NÓS- Biblioteca Acadêmica</title>
+  <title>ERD - Biblioteca Acadêmica</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,16 +37,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="sobrenos.html">Quem somos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="livro.html">Livros</a>
-          </li>
+             <a class="nav-link js-scroll-trigger" href="sobrenos.html">Quem Somos</a>
+          </li>          
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contato.html">Contatos</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="erd.html">ERD</a>
           </li>
         </ul>
       </div>
@@ -60,36 +60,30 @@
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">Biblioteca Acadêmica</h1>
           <hr class="divider my-4">
-          <h3 class="text-uppercase text-white font-weight-bold">QUEM SOMOS</h3>
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5"></p>
-          
+         <h4 class="text-uppercase text-white font-weight-bold">ERD DO PROJETO</h4>          
         </div>
       </div>
     </div>
   </header>
 
-  <!-- About Section -->
-  <section class="page-section bg-primary" id="sobrenos.html">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">Biblioteca Acadêmica</h2>
-          <hr class="divider light my-4">
-          <p class="text-black">No primeiro semestre de 2019 da Instituição da Fatec de Praia Grande, o aluno do 4° semestre, o Rafael Ribeiro Bovecchio desenvolveu um software de uma Biblioteca Acadêmica, o intuido desse projeto é atender as necessidades de ensino e pesquisa de seus estudantes e funcionários.</p>          
-        </div>
-      </div>
+    <section class="page-section bg-dark text-white">
+    <div class="container text-center">
+        <h2 class="text-uppercase text-white font-weight-bold">ERD</h2><br>  
+      <img src="img/modelo.jpg" alt=""><hr>
+     <h6 class="text-uppercase text-white font-weight-bold">Fonte: Elaborado pelo aluno</h6>      
     </div>
-  </section>  
 
- 
+  </section> 
 
-
-  <!-- Footer -->
+<!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-       <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP <br>
+       <a href="https://github.com/Bovecchio/ProjetoBiblioteca">GitHub do Projeto</a>
+      </div>      
+    </div> 
   </footer>
 
   <!-- Bootstrap core JavaScript -->
