--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="sobrenos.html">Quem Somos</a>
-          </li>
-          </li>
+          </li>         
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contato.html">Contatos</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="erd.html">ERD</a>
           </li>
         </ul>
       </div>
@@ -71,8 +73,10 @@
 <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP</div>
-    </div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP <br>
+       <a href="https://github.com/Bovecchio/ProjetoBiblioteca">GitHub do Projeto</a>
+      </div>      
+    </div> 
   </footer>
 
   <!-- Bootstrap core JavaScript -->
