--- a/login.html
+++ b/login.html
@@ -37,16 +37,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="sobrenos.html">Sobre nós</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="livro.html">Livros</a>
-          </li>
+             <a class="nav-link js-scroll-trigger" href="sobrenos.html">Quem Somos</a>
+         </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contato.html">Contatos</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="erd.html">ERD</a>
           </li>
         </ul>
       </div>
@@ -75,23 +75,25 @@
   <!-- Services Section -->
   <section class="page-section bg-dark text-white">
   <div class="row h-10 align-items-center justify-content-center text-center">
-    <form method="POST">
+    <form>
       <h3 class="text-uppercase text-black font-weight-bold">LOGIN</h3><br><br>
     <h3>Usuário:</h3>
     <input type="text" name="usuario" value=""><br/><br/>
       <h3>Senha:</h3>
     <input type="password" name="senha" value=""><br/><br/>
-    <input type="submit" class="btn btn-outline-primary" value="Enviar"><br/><br/>
-   </div>
+    <input type="submit" class="btn btn-outline-primary" value="Enviar"><br/><br/>   
   </form>
+  </div>
  </section>
 
   
-  <!-- Footer -->
+<!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
-    </div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP <br>
+       <a href="https://github.com/Bovecchio/ProjetoBiblioteca">GitHub do Projeto</a>
+      </div>      
+    </div> 
   </footer>
 
   <!-- Bootstrap core JavaScript -->
