--- a/livro.html
+++ b/livro.html
@@ -37,16 +37,17 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="sobrenos.html">Sobre nós</a>
+               <a class="nav-link js-scroll-trigger" href="sobrenos.html">Quem Somos</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="livro.html">Livros</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contato.html">Contatos</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="erd.html">ERD</a>
           </li>
         </ul>
       </div>
@@ -82,10 +83,13 @@
   </section>
 
   
-  <!-- Footer -->
+<!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-       <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - FATEC DE PRAIA GRANDE/SP <br>
+       <a href="https://github.com/Bovecchio/ProjetoBiblioteca">GitHub do Projeto</a>
+      </div>      
+    </div> 
   </footer>
 
   <!-- Bootstrap core JavaScript -->
